add update task and tests